spacing issue is better.

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -123,7 +123,7 @@ hr {
 }
 
 .full-list {
-    width: 40%;
+    width: 500px;
 }
 
 .left-side, .right-side {
